# hmacauth

./: .gitignore  Cargo.toml  README.md  run_cli.sh  run_desktop.sh  run_web.sh
hmacauth-cli/: Cargo.toml
hmacauth-cli/src/: main.rs
hmacauth-lib/: Cargo.toml
hmacauth-lib/src/: lib.rs  models.rs  utils.rs
hmacauth-wasm/: Cargo.toml  build.sh
hmacauth-wasm/src/: lib.rs
hmacauth-web/: Cargo.toml  run.sh
hmacauth-web/src/: main.rs
hmacauth-web/static/: index.html
hmacauth-web/statics/: index.html
hmacauth_cli/: Cargo.toml  build.rs
hmacauth_cli/src/: main.rs
hmacauth_desktop/: Cargo.toml  README.md
hmacauth_desktop/src/: main.rs
hmacauth_desktop/ui/: appwindow.slint
hmacauth_lib/: Cargo.toml
hmacauth_lib/src/: lib.rs  models.rs  utils.rs
hmacauth_wasm/: Cargo.toml  build.rs  build.sh
hmacauth_wasm/src/: lib.rs
hmacauth_web/: Cargo.toml  run.sh
hmacauth_web/src/: main.rs
hmacauth_web/static/: index.html
