[package]
name = "hmacauth-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmacauth-lib = { path = "../hmacauth-lib" }

tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0.114"
