[package]
name = "hmacauth-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
hmacauth-lib = { path = "../hmacauth-lib" }

reqwest = { version = "0.12" , features = ["json","rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
