[package]
name = "hmacauth_wasm"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]


[[build]]
target = "wasm32-unknown-unknown"


[dependencies]
hmacauth_lib = { path = "../hmacauth_lib" }

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ['console'] }
js-sys = "0.3"
