[package]
name = "hmacauth_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmacauth_lib = {path = "../hmacauth_lib" }


actix-web = "4"
pretty_env_logger = "0.5"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-files = "0.6"
reqwest = "0.12"
url = "2.5"